# MoonEngine

./: .gitattributes  .gitignore  CMakeLists.txt  Citations.md  Citations.txt  CodingConventions.md  CodingConventions.txt  README.md
app/ShatteredMoon_25/: CMakeLists.txt
app/ShatteredMoon_25/resources/: instance_phong.fs  instance_phong.vs  phong.fs  phong.program  phong.vs
app/ShatteredMoon_25/src/: main.cpp
app/ShatteredMoon_50/: CMakeLists.txt
app/ShatteredMoon_50/resources/: instance_phong.fs  phong.vs  scenedata.json  skydome.program  skydome.vs
app/ShatteredMoon_50/resources/meshes/: cube.mtl  cubev2.mtl
app/ShatteredMoon_50/resources/programs/: deferred_dirL.fs  deferred_dirL.program  deferred_dirL.vs  deferred_geom.fs  deferred_pointL.fs  deferred_pointL.program  deferred_pointL.vs  flat.vs  geom.program  geom_deferred.fs  instance_phong.program  instance_phong.vs  phong.fs  phong_deferred.fs  phong_deferred.program  phong_dir_deferred.fs  phong_dir_deferred.program  phong_dir_deferred.vs  phong_directional_deferred.program  phong_light_deferred.vs  phong_point_deferred.fs  phong_point_deferred.program  phong_point_deferred.vs  terrain_geom_deferred.fs  terrain_geom_deferred.vs
app/ShatteredMoon_50/src/: main.cpp
engine/: CMakeLists.txt
engine/src/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  MoonEngine.h  Transform.h  World.h
engine/src/Collision/: BoundingBox.cpp  BoundingBox.h  Collision.h  IntersectionType.h
engine/src/Component/: Component.cpp  Component.h  Components.h
engine/src/Component/CameraComponents/: Camera.cpp  Camera.h  CameraCutscene.cpp  CameraCutscene.h  CameraRecorder.cpp  CameraRecorder.h  FirstPersonController.cpp  FirstPersonController.h  ThirdPersonOrbitalController.cpp  ThirdPersonOrbitalController.h
engine/src/Component/CharacterComponents/: BeamComponent.cpp  BeamComponent.h  CollectableComponent.cpp  CollectableComponent.h  MoonSpriteComponent.cpp  MoonSpriteComponent.h  Particle.cpp  Particle.h  PlayerBrightness.cpp  PlayerBrightness.h  PlayerRespawn.cpp  PlayerRespawn.h  PlayerTimer.cpp  PlayerTimer.h  ShardMovement.cpp  ShardMovement.h  SunMovement.cpp  SunMovement.h  ThirdPersonCharacterController.cpp  ThirdPersonCharacterController.h  Wisp.cpp  Wisp.h
engine/src/Component/CollisionComponents/: BoxCollider.cpp  BoxCollider.h
engine/src/Component/EffectComponents/: MoonEffect.cpp  MoonEffect.h  Particle.h  ShardEffect.cpp  ShardEffect.h  ShardMovement.cpp
engine/src/Component/GUIComponents/: GUI.cpp  GUI.h
engine/src/Component/GameStateComponents/: GameState.cpp  GameState.h
engine/src/Component/GeometryComponents/: Mesh.h  StaticMesh.cpp  StaticMesh.h
engine/src/Component/LightComponents/: DirLight.cpp  DirLight.h  Light.h  PointLight.cpp  PointLight.h
engine/src/Component/MaterialComponents/: AssimpMaterial.cpp  (+6 more)
engine/src/EngineApp/: EngineApp.cpp  EngineApp.h  MoonEngineCfg.cpp  MoonEngineCfg.h
engine/src/Framebuffers/: GBuffer.cpp  GBuffer.h  SSAOBuffers.cpp  SSAOBuffers.h  ShadowMaps.cpp  ShadowMaps.h
engine/src/GL/: GLBuffer.cpp  GLBuffer.h  GLConstants.h  GLProgram.cpp  GLProgram.h  GLSampler.cpp  GLSampler.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVertexArrayObject.cpp  GLVertexArrayObject.h  OpenGL.h
engine/src/GLUtil/: GLNormalMapCreator.cpp  GLNormalMapCreator.h  GLProgramUtilities.cpp  GLProgramUtilities.h  GLTextureConfiguration.h  GL_LOG.h
engine/src/GLWrapper/: GLBuffer.cpp  GLBuffer.h  GLConstants.h  GLFramebuffer.cpp  GLFramebuffer.h  GLProgram.cpp  GLProgram.h  GLSampler.cpp  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLTextureConfiguration.h  GLVertexArrayObject.cpp  GLVertexArrayObject.h  OpenGL.h
engine/src/GameObject/: GameObject.cpp  GameObject.h  Message.h  Tag.h
engine/src/Geom/: World.cpp
engine/src/Geometry/: Hit.h  MeshCreator.cpp  MeshCreator.h  Transform.cpp  Transform.h  World.cpp  World.h
engine/src/GlobalFuncs/: GlobalFuncs.cpp  GlobalFuncs.h  Instantiate.cpp  Instantiate.h
engine/src/GlobalFunctions/: Instantiate.cpp
engine/src/IO/: Controller.cpp  Controller.h  ControllerInputService.cpp  ControllerInputService.h  GLFWHandler.cpp  GLFWHandler.h  Input.cpp  Input.h  InputConfiguration.cpp  InputConfiguration.h  InputService.h  Keyboard.cpp  Keyboard.h  KeyboardInputSerivce.cpp  KeyboardInputService.h  KeyboardServiceConfiguration.cpp  KeyboardServiceConfiguration.h  Mouse.cpp  Mouse.h  TextLoader.cpp  TextLoader.h
engine/src/LevelEditor/: Level.cpp  Level.h  LevelBuilder.cpp  LevelBuilder.h  LevelBuildingVisual.cpp  LevelBuildingVisual.h  LevelLoader.cpp  LevelLoader.h
engine/src/Libraries/: Colors.cpp  Colors.h  InstTransformLib.cpp  InstTransformLib.h  Library.cpp  Library.h  MeshLibrary.cpp  MeshLibrary.h  ProgramLibrary.cpp  ProgramLibrary.h  SamplerLibrary.cpp  SamplerLibrary.h  TextureLibrary.cpp  TextureLibrary.h  TransformLib.h
engine/src/Loaders/: AssimpLoader.cpp  AssimpLoader.h  AssimpModelInfo.cpp  AssimpModelInfo.h  BasicLoader.cpp  BasicLoader.h  BasicMeshInfo.h  Library.cpp  Library.h  MeshInfo.h  MeshLibrary.cpp  MeshLibrary.h  ProgramLibrary.cpp  ProgramLibrary.h  ProgramLoader.cpp  ProgramLoader.h  TextureLoader.cpp  TextureLoader.h  TransformLib.cpp  VertexBoneData.h
engine/src/Render/: DefaultRenderer.cpp  DefaultRenderer.h  DeferredRenderer.cpp  DeferredRenderer.h  I_Renderer.h  PostProcess.h  ProgramRenderer.cpp  ProgramRenderer.h  RenderBatch.h  ShadowMap.h  ShadowMaps.cpp  ShadowMaps.h
engine/src/Scene/: Scene.cpp  Scene.h
engine/src/Sound/: Audio.h  AudioService.cpp  AudioService.h  FMODAudio.cpp  FMODAudio.h  NullAudio.h
engine/src/Util/: FileIterator.h  GLMUtil.cpp  GLMUtil.h  InstanceLoader.h  Logger.cpp  Logger.h  MathUtil.cpp  MathUtil.h
test/: CMakeLists.txt
test/resources/: .gitattributes  flat-bad.program  flat.program
test/test/: TestBoundingBox.cpp  TestCamera.cpp  TestGLBuffer.cpp  TestGLMUtil.cpp  TestGLProgram.cpp  TestGLShader.cpp  TestKDNode.cpp  TestLogger.cpp  TestMathUtil.cpp  TestObjectLoader.cpp  TestProgramLoader.cpp  TestQuadtree.cpp  main.cpp
(+236 files in other folders)
